HICE HASTA LA 10 EN ECONOMIA

--- a/layouts/potreroDigital_proyecto_grupo17_ECONOMIA.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_ECONOMIA.HTML
@@ -78,107 +78,117 @@
 
 <main class=" row align-items-center justify-content-center">
 <div class="card" style="width: 18rem;">
-            <img src="IMAGENES/" class="card-img-top" alt="...">
+            <img src="IMAGENES/ECONOMIA/NOTICIA1.jpg" height="190px" class="card-img-top" alt="...">
             <div class="card-body">
-              <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+              <a href="NOTICIAeco1.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="La provincia acreditará este viernes 20 de noviembre de 2020 los fondos de la Tarjeta Única de Ciudadanía.">
+                La provincia acreditará este viernes 20 de noviembre de 2020 los fondos de la Tarjeta Única de Ciudadanía.
               </button></h1> </a>
-            <p class="card-text"></p>
-            <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+            <p class="card-text">El Ministerio de Desarrollo Social, a través de </p>
+            <a href="NOTICIAeco1.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/ECONOMIA/NOTICIA2.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="NOTICIAeco2.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Santa Fe firmó convenios para refuerzo alimentario en localidades del norte de la provincia.">
+              Santa Fe firmó convenios para refuerzo alimentario en localidades del norte de la provincia.
             </button></h1></a>
 
-          <p class="card-text"><br></p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          <p class="card-text">El gobierno de la provincia, a través de los Ministerios<br></p>
+          <a href="NOTICIAeco2.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/ECONOMIA/NOTICIA3.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="NOTICIAeco2.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Se entregaron nuevos créditos a emprendedores y comerciantes de Malabrigo.">
+              Se entregaron nuevos créditos a emprendedores y comerciantes de Malabrigo.
             </button></h1> </a>
-          <p class="card-text"></p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          <p class="card-text">El Intendente Roberto Sponton, junto al Secretario de</p>
+          <a href="NOTICIAeco3.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/ECONOMIA/NOTICIA4.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="NOTICIAeco4.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Impulsan nuevamente un acuerdo de precios mayoristas de sugerencia para los 10 productos que más se comercializan en esta época del año.">
+              Impulsan nuevamente un acuerdo de precios mayoristas de sugerencia para los 10 productos que más se comercializan en esta época del año.
             </button></h1></a>
-          <p class="card-text">"</p>
-          <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+          <p class="card-text">El Ministerio de Producción, Ciencia y Tecnología, a través</p>
+          <a href="NOTICIAeco4.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
       </div>
 
     </div>
 
     <div class="card" style="width: 18rem;">
-                <img src="" class="card-img-top" alt="...">
+                <img src="IMAGENES/ECONOMIA/NOTICIA5.jpg" height="190px" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                  <a href="NOTICIAeco5.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Beneficios para el sector turístico, hotelero y gastronómico: Diputados aprobó la ley destinada a atender las graves consecuencias originadas por las sucesivas cuarentenas.">
+                    Beneficios para el sector turístico, hotelero y gastronómico: Diputados aprobó la ley destinada a atender las graves consecuencias originadas por las sucesivas cuarentenas.
                   </button></h1> </a>
-                <p class="card-text"></p>
-                <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                <p class="card-text">Los diputados provinciales logramos, consensuar primero</p>
+                <a href="NOTICIAeco5.html" class="btn btn-outline-primary btn-block">Ver mas</a>
           </div>
 
           </div>
               <div class="card" style="width: 18rem;">
-              <img src="" class="card-img-top" alt="...">
+              <img src="IMAGENES/ECONOMIA/NOTICIA6.jpg" height="190px" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                <a href="NOTICIAeco6.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="La provincia dispuso nuevos beneficios fiscales para los contribuyentes más afectados por la pandemia.">
+                  La provincia dispuso nuevos beneficios fiscales para los contribuyentes más afectados por la pandemia.
                 </button></h1></a>
 
-              <p class="card-text"><br></p>
-              <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+              <p class="card-text">El paquete de medidas, que incluye nuevos planes de pago<br></p>
+              <a href="NOTICIAeco6.html" class="btn btn-outline-primary btn-block">Ver mas</a>
           </div>
 
           </div>
               <div class="card" style="width: 18rem;">
-              <img src="" class="card-img-top" alt="...">
+              <img src="IMAGENES/ECONOMIA/NOTICIA7.jpg" height="190px" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                <a href="NOTICIAeco7.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="La provincia avanza en el plan de reactivación del puerto de la ciudad de Santa Fe.">
+                  La provincia avanza en el plan de reactivación del puerto de la ciudad de Santa Fe.
                 </button></h1> </a>
-              <p class="card-text"></p>
-              <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+              <p class="card-text">Se cargaron otras 2.500 toneladas de maíz quebrado </p>
+              <a href="NOTICIAeco7.html" class="btn btn-outline-primary btn-block">Ver mas</a>
           </div>
 
           </div>
               <div class="card" style="width: 18rem;">
-              <img src="" class="card-img-top" alt="...">
+              <img src="IMAGENES/ECONOMIA/NOTICIA8.jpg" height="190px" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                <a href="NOTICIAeco8.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="La provincia informó que invirtió más de 195 millones de pesos para asistir a comerciantes y prestadores de servicios afectados por la emergencia.">
+                  La provincia informó que invirtió más de 195 millones de pesos para asistir a comerciantes y prestadores de servicios afectados por la emergencia.
                 </button></h1></a>
-              <p class="card-text">"</p>
-              <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+              <p class="card-text">e realizó un nuevo desembolso de la Asistencia</p>
+              <a href="NOTICIAeco8.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
           </div>
 
         </div>
 
         <div class="card" style="width: 18rem;">
-                    <img src="" class="card-img-top" alt="...">
+                    <img src="IMAGENES/ECONOMIA/NOTICIA9.jpg" height="190px" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                      <a href="NOTICIAeco9.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="A través del Fondo Algodonero, la provincia asiste financieramente a 297 productores algodoneros.">
+                        A través del Fondo Algodonero, la provincia asiste financieramente a 297 productores algodoneros.
                       </button></h1> </a>
-                    <p class="card-text"></p>
-                    <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                    <p class="card-text">El Gobierno de la provincia de Santa Fe, mediante el decreto </p>
+                    <a href="NOTICIAeco9.html" class="btn btn-outline-primary btn-block">Ver mas</a>
               </div>
 
               </div>
                   <div class="card" style="width: 18rem;">
-                  <img src="" class="card-img-top" alt="...">
+                  <img src="IMAGENES/ECONOMIA/NOTICIA10.jpg" height="190px" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                    <a href="NOTICIAeco10.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="En qué caso y en qué condiciones se refinanciarán automáticamente los saldos impagos de las tarjetas de crédito.">
+                      En qué caso y en qué condiciones se refinanciarán automáticamente los saldos impagos de las tarjetas de crédito.
                     </button></h1></a>
 
-                  <p class="card-text"><br></p>
-                  <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                  <p class="card-text">El gobierno provincial, a través de la dirección de Promoción <br></p>
+                  <a href="NOTICIAeco10.html" class="btn btn-outline-primary btn-block">Ver mas</a>
               </div>
 
               </div>
