TERMINE LAS NOTICIAS DE ECONOMIA

--- a/layouts/potreroDigital_proyecto_grupo17_DEPORTES.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_DEPORTES.HTML
@@ -207,7 +207,7 @@
                     <a href="NOTICIAdep12.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Alfredo Segado está entre los mejores. Clasificó a la Final del Campeonato Argentino Sub 2300.">
                       Alfredo Segado está entre los mejores. Clasificó a la Final del Campeonato Argentino Sub 2300.
                     </button></h1></a>
-                  <p class="card-text">"</p>
+                  <p class="card-text">El jugador y dirigente de Area Reconquista (afiliada a la </p>
                   <a href="NOTICIAdep12.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
               </div>
 
