--- a/layouts/potreroDigital_proyecto_grupo17_ECONOMIA.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_ECONOMIA.HTML
@@ -193,22 +193,24 @@
 
               </div>
                   <div class="card" style="width: 18rem;">
-                  <img src="" class="card-img-top" alt="...">
+                  <img src="IMAGENES/ECONOMIA/NOTICIA11.jpg" height="190px" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                    <a href="NOTICIAeco11.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Informe especial sobre el financiamiento empresario mediante la utilización de los instrumentos que aporta el Mercado de Capitales. Conclusiones.">
+                      Informe especial sobre el financiamiento empresario mediante la utilización de los instrumentos que aporta el Mercado de Capitales. Conclusiones.
                     </button></h1> </a>
-                  <p class="card-text"></p>
-                  <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                  <p class="card-text">Las empresas y el Mercado de Capitales argentino </p>
+                  <a href="NOTICIAeco11.html" class="btn btn-outline-primary btn-block">Ver mas</a>
               </div>
 
               </div>
                   <div class="card" style="width: 18rem;">
-                  <img src="" class="card-img-top" alt="...">
+                  <img src="IMAGENES/ECONOMIA/NOTICIA12.jpg" height="190px" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                    <a href="NOTICIAeco12.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Dólar hoy: la cotización libre sube a $162 y la brecha se sostiene en el 100 por ciento">
+                      Dólar hoy: la cotización libre sube a $162 y la brecha se sostiene en el 100 por ciento
                     </button></h1></a>
-                  <p class="card-text">"</p>
-                  <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+                  <p class="card-text">Las paridades bursátiles también ascienden por el </p>
+                  <a href="NOTICIAeco12.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
               </div>
 
             </div>
