--- a/layouts/potreroDigital_proyecto_grupo17_PROYEC.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_PROYEC.HTML
@@ -251,7 +251,7 @@
 
 
   <div class="footer-copyright text-center py-3">© 2020 Copyright:MIALNOTICIAS
-    <a href="PROYEC.HTML"> MIALNOTICAS</a>
+    <a href="potreroDigital_proyecto_grupo17_PROYEC.HTML"> MIALNOTICAS</a>
   </div>
 
 
