--- a/layouts/potreroDigital_proyecto_grupo17_POLITICA.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_POLITICA.HTML
@@ -81,127 +81,139 @@
 
   <main class=" row align-items-center justify-content-center">
   <div class="card" style="width: 18rem;">
-              <img src="" class="card-img-top" alt="...">
+              <img src="IMAGENES/politica/noticia1.jpg" height="190px" class="card-img-top" alt="...">
               <div class="card-body">
-                <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                <a href="noticiapol1.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Perú vende bonos a 100 años solo días después de crisis política">
+                  Perú vende bonos a 100 años solo días después de crisis política
                 </button></h1> </a>
-              <p class="card-text"></p>
-              <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+              <p class="card-text">Perú está volviendo al mercado de deuda</p>
+              <a href="noticiapol1.html" class="btn btn-outline-primary btn-block">Ver mas</a>
         </div>
 
         </div>
             <div class="card" style="width: 18rem;">
-            <img src="" class="card-img-top" alt="...">
+            <img src="IMAGENES/politica/noticia2.jpg" height="190px" class="card-img-top" alt="...">
             <div class="card-body">
-              <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+              <a href="noticiapol2.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Biden anuncia su gabinete y comienza a desarmar la política de tensión de Trump">
+                Biden anuncia su gabinete y comienza a desarmar la política de tensión de Trump
               </button></h1></a>
 
-            <p class="card-text"><br></p>
-            <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+            <p class="card-text">Las secretarías de Estado y del Tesoro son</p>
+            <a href="noticiapol2.html" class="btn btn-outline-primary btn-block">Ver mas</a>
         </div>
 
         </div>
             <div class="card" style="width: 18rem;">
-            <img src="" class="card-img-top" alt="...">
+            <img src="IMAGENES/politica/noticia3.jpg" height="190px" class="card-img-top" alt="...">
             <div class="card-body">
-              <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+              <a href="noticiapol3.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Subsidios al transporte: cruce entre el PJ y Juntos por el Cambio por la política nacional para el sector">
+                Subsidios al transporte: cruce entre el PJ y Juntos por el Cambio por la política nacional para el sector
               </button></h1> </a>
-            <p class="card-text"></p>
-            <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+            <p class="card-text">La vicepresidenta del Ente de la Movilidad, Renata Ghiliotti</p>
+            <a href="noticiapol3.html" class="btn btn-outline-primary btn-block">Ver mas</a>
         </div>
 
         </div>
             <div class="card" style="width: 18rem;">
-            <img src="" class="card-img-top" alt="...">
+            <img src="IMAGENES/politica/noticia4.jpg" height="190px" class="card-img-top" alt="...">
             <div class="card-body">
-              <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+              <a href="noticiapol4.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="ARA San Juan: por qué la Justicia ordenó investigar la responsabilidad política">
+                ARA San Juan: por qué la Justicia ordenó investigar la responsabilidad política
               </button></h1></a>
-            <p class="card-text">"</p>
-            <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+            <p class="card-text">A los 44 tripulantes de la nave "los enviaron a la muerte"</p>
+            <a href="noticiapol4.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
         </div>
 
       </div>
 
       <div class="card" style="width: 18rem;">
-                  <img src="" class="card-img-top" alt="...">
+                  <img src="IMAGENES/politica/noticia5.jpg" height="190px" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                    <a href="noticiapol5.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Santiago Cafiero, sobre el caso Abigail: “Me parece mezquina la utilización política que se está haciendo”">
+                      Santiago Cafiero, sobre el caso Abigail: “Me parece mezquina la utilización política que se está haciendo”
                     </button></h1> </a>
-                  <p class="card-text"></p>
-                  <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                  <p class="card-text">El Jefe de Gabinete afirmó que se hizo un uso “extremo del</p>
+                  <a href="noticiapol5.html" class="btn btn-outline-primary btn-block">Ver mas</a>
             </div>
 
             </div>
                 <div class="card" style="width: 18rem;">
-                <img src="" class="card-img-top" alt="...">
+                <img src="IMAGENES/politica/noticia6.jpg" height="190px" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                  <a href="noticiapol6.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="La nueva orientación de la política económica y la pata cambiaria que falta">
+                    La nueva orientación de la política económica y la pata cambiaria que falta
                   </button></h1></a>
 
-                <p class="card-text"><br></p>
-                <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                <p class="card-text">Sin plan explícito, pero con un cúmulo de medidas</p>
+                <a href="noticiapol6.html" class="btn btn-outline-primary btn-block">Ver mas</a>
             </div>
 
             </div>
                 <div class="card" style="width: 18rem;">
-                <img src="" class="card-img-top" alt="...">
+                <img src="IMAGENES/politica/noticia7.jpg" height="190px" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                  <a href="noticiapol7.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Luis Basterra contra Mauricio Macri: criticó la política agraria de retenciones y liquidación de granos">
+                    Luis Basterra contra Mauricio Macri: criticó la política agraria de retenciones y liquidación de granos
                   </button></h1> </a>
-                <p class="card-text"></p>
-                <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                <p class="card-text">Con la crisis cambiaria, el campo es uno de los</p>
+                <a href="noticiapol7.html" class="btn btn-outline-primary btn-block">Ver mas</a>
             </div>
 
             </div>
                 <div class="card" style="width: 18rem;">
-                <img src="" class="card-img-top" alt="...">
+                <img src="IMAGENES/politica/noticia8.jpg" height="190px" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                  <a href="noticiapol8.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="El miedo a las mujeres en la política">
+                    El miedo a las mujeres en la política
                   </button></h1></a>
-                <p class="card-text">"</p>
-                <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+                <p class="card-text">Partamos de un hecho: si el mundo, la política</p>
+                <a href="noticiapol8.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
             </div>
 
           </div>
 
           <div class="card" style="width: 18rem;">
-                      <img src="" class="card-img-top" alt="...">
+                      <img src="IMAGENES/politica/noticia9.jpg" height="190px" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                        <a href="noticiapol9.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="¿Cuál es la política monetaria?">
+                          ¿Cuál es la política monetaria?
                         </button></h1> </a>
-                      <p class="card-text"></p>
-                      <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                      <p class="card-text">Dentro de algunos pasos hacia la ortodoxia por</p>
+                      <a href="noticiapol9.html" class="btn btn-outline-primary btn-block">Ver mas</a>
                 </div>
 
                 </div>
                     <div class="card" style="width: 18rem;">
-                    <img src="" class="card-img-top" alt="...">
+                    <img src="IMAGENES/politica/noticia10.jpg" height="190px" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                      <a href="noticiapol10.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Senado: martes y jueves habrá reuniones virtuales de comisión">
+                        Senado: martes y jueves habrá reuniones virtuales de comisión
                       </button></h1></a>
 
-                    <p class="card-text"><br></p>
-                    <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                    <p class="card-text">Las comisiones de Producción, Legislación General y la de</p>
+                    <a href="noticiapol10.html" class="btn btn-outline-primary btn-block">Ver mas</a>
                 </div>
 
                 </div>
                     <div class="card" style="width: 18rem;">
-                    <img src="" class="card-img-top" alt="...">
+                    <img src="IMAGENES/politica/noticia11.jpg" height="190px" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                      <a href="noticiapol11.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="La política exterior Argentina 2020: cuando se creía tener todas las respuestas, se cambiaron todas las preguntas">
+                        La política exterior Argentina 2020: cuando se creía tener todas las respuestas, se cambiaron todas las preguntas
                       </button></h1> </a>
-                    <p class="card-text"></p>
-                    <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+                    <p class="card-text">Más allá de mala relación durante el pasado período K</p>
+                    <a href="noticiapol11.html" class="btn btn-outline-primary btn-block">Ver mas</a>
                 </div>
 
                 </div>
                     <div class="card" style="width: 18rem;">
-                    <img src="" class="card-img-top" alt="...">
+                    <img src="IMAGENES/politica/noticia12.jpg" height="190px" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+                      <a href="noticiapol12.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Los grandes recursos de hidrocarburos de la región encuentran en la política una piedra en el zapato">
+                        Los grandes recursos de hidrocarburos de la región encuentran en la política una piedra en el zapato
                       </button></h1></a>
-                    <p class="card-text">"</p>
-                    <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+                    <p class="card-text">Los desafíos de la industria petrolera en el corto y largo </p>
+                    <a href="noticiapol12.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
                 </div>
 
               </div>
