--- a/layouts/potreroDigital_proyecto_grupo17_SALUD.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_SALUD.HTML
@@ -80,129 +80,141 @@
 <main class=" row align-items-center justify-content-center">
 
       <div class="card" style="width: 18rem;">
-            <img src="IMAGENES/SALUD/covid.jpg" class="card-img-top" alt="...">
+            <img src="IMAGENES/SALUD/noticia1.jpg" height="190px" class="card-img-top" alt="...">
             <div class="card-body">
-              <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="1.000.000 de casos de covid">
-              </button>1.000.000 de casos de covid</h1> </a>
-            <p class="card-text">Siguen creciendo los contagios por covid en el país.</p>
-            <a href="noticiaderobo.html" class="btn btn-outline-primary btn-block">Ver mas</a>
+              <a href="noticiasal1.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Situación COVID-19 en Tucumán">
+                Situación COVID-19 en Tucumán
+              </button></h1> </a>
+            <p class="card-text">El Ministerio de Salud Pública informa que se</p>
+            <a href="noticiasal1.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="IMAGENES/SALUD/trump.jpg" class="card-img-top" alt="...">
+          <img src="IMAGENES/SALUD/noticia2.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Donald Trump, positivo de COVID-19">
-            </button>Donald Trump, positivo de COVID-19</h1></a>
+            <a href="noticiasal2.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Más de 2.500 agentes de salud se realizaron el testeo voluntario de anticuerpos">
+              Más de 2.500 agentes de salud se realizaron el testeo voluntario de anticuerpos
+            </button></h1></a>
 
-          <p class="card-text">Actualmente se encuentra en el Centro Médico Militar Walter Reed por precaución. <br></p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
-      </div>
-
-      </div>
-          <div class="card" style="width: 18rem;">
-          <img src="IMAGENES/SALUD/anciano.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Los centros de salud se preparan para retomar la actividad física bajo estrictos protocolos">
-            </button>Los centros de salud se preparan para retomar la actividad física bajo estrictos protocolos</h1> </a>
-          <p class="card-text">La fecha estimativa de regreso se hará efectiva una vez finalizada las capacitaciones.</p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          <p class="card-text">La actividad se está realizando en el marco de las acciones </p>
+          <a href="noticiasal2.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="IMAGENES/SALUD/ministro.jpg" class="card-img-top" alt="...">
+          <img src="IMAGENES/SALUD/noticia3.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Covid-19: Vacunarán primero a los más vulnerables y a trabajadores de salud">
-            </button>Covid-19: Vacunarán primero "a los más vulnerables y a trabajadores de salud</h1></a>
-          <p class="card-text">"Tenemos una posición privilegiada en el acceso a las vacunas con la idea de que.</p>
-          <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
+            <a href="noticiasal3.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="El hospital del Este Eva Perón tendrá un nuevo tomógrafo">
+              El hospital del Este Eva Perón tendrá un nuevo tomógrafo
+            </button></h1> </a>
+          <p class="card-text">En la mañana la Ministra de Salud y el Gobernador de la</p>
+          <a href="noticiasal3.html" class="btn btn-outline-primary btn-block">Ver mas</a>
+      </div>
+
+      </div>
+          <div class="card" style="width: 18rem;">
+          <img src="IMAGENES/SALUD/noticia4.jpg" height="190px" class="card-img-top" alt="...">
+          <div class="card-body">
+            <a href="noticiasal4.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="La dieta alcalina: ¿qué riesgos para la salud conlleva este régimen?">
+              La dieta alcalina: ¿qué riesgos para la salud conlleva este régimen?
+            </button></h1></a>
+          <p class="card-text">La popularidad de la dieta alcalina ha crecido</p>
+          <a href="noticiasal4.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
       </div>
 
 
   </div>
 
       <div class="card" style="width: 18rem;">
-            <img src="" class="card-img-top" alt="...">
+            <img src="IMAGENES/SALUD/noticia5.jpg" height="190px" class="card-img-top" alt="...">
             <div class="card-body">
-              <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+              <a href="noticiasal5.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Analizan protocolos para la reapertura de los teatros">
+                Analizan protocolos para la reapertura de los teatros
               </button></h1> </a>
-            <p class="card-text"></p>
-            <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+            <p class="card-text">La ministra de Salud Pública, doctora Rossana Chahla</p>
+            <a href="noticiasal5.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/SALUD/noticia6.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="noticiasal6.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Qué es el hipertiroidismo y a quiénes afecta">
+              Qué es el hipertiroidismo y a quiénes afecta
             </button></h1></a>
 
-          <p class="card-text"><br></p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          <p class="card-text">La jefa de la unidad de Patología Glandular del </p>
+          <a href="noticiasal6.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/SALUD/noticia7.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="noticiasal7.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="El BAS inicia la semana controlando barrios de las áreas programáticas Centro, Este, Sur y Oeste">
+              El BAS inicia la semana controlando barrios de las áreas programáticas Centro, Este, Sur y Oeste
             </button></h1> </a>
-          <p class="card-text"></p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          <p class="card-text">Los equipos sanitarios se dirigieron a diferentes</p>
+          <a href="noticiasal7.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/SALUD/noticia8.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="noticiasal8.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="El programa Buscarte está en Tafí del Valle realizando prevención y controles sanitarios">
+              El programa Buscarte está en Tafí del Valle realizando prevención y controles sanitarios
             </button></h1></a>
-          <p class="card-text">"</p>
-          <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+          <p class="card-text">Los equipos de salud se apostaron en la villa turística</p>
+          <a href="noticiasal8.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
       </div>
 
     </div>
 
       <div class="card" style="width: 18rem;">
-            <img src="" class="card-img-top" alt="...">
+            <img src="IMAGENES/SALUD/noticia9.jpg" height="190px" class="card-img-top" alt="...">
             <div class="card-body">
-              <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+              <a href="noticiasal9.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Realizaron un homenaje al técnico en hemoterapia Hugo Bulacio">
+                Realizaron un homenaje al técnico en hemoterapia Hugo Bulacio
               </button></h1> </a>
-            <p class="card-text"></p>
-            <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+            <p class="card-text">En un emotivo acto, la titular de la cartera sanitaria</p>
+            <a href="noticiasal9.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/SALUD/noticia10.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="noticiasal10.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="La Sociedad Sirio Libanesa donó equipos de prevención al Ministerio de Salud">
+              La Sociedad Sirio Libanesa donó equipos de prevención al Ministerio de Salud
             </button></h1></a>
 
-          <p class="card-text"><br></p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          <p class="card-text">La titular de la cartera sanitaria, doctora Rossana </p>
+          <a href="noticiasal10.html" class="btn btn-outline-primary btn-block">Ver mas</a>
 
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/SALUD/noticia11.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="noticiasal11.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Se realizó el segundo Operativo de anticuerpos a empleados del hospital Centro de Salud">
+              Se realizó el segundo Operativo de anticuerpos a empleados del hospital Centro de Salud
             </button></h1> </a>
-          <p class="card-text"></p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+          <p class="card-text">La jefa del Departamento de Salud Ocupacional de la</p>
+          <a href="noticiasal11.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
 
       </div>
           <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
+          <img src="IMAGENES/SALUD/noticia12.jpg" height="190px" class="card-img-top" alt="...">
           <div class="card-body">
-            <a href=""><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
+            <a href="noticiasal12.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Progresan las obras del hospital Regional de Monteros ‘Gral. Gregorio Araoz de Lamadrid’">
+              Progresan las obras del hospital Regional de Monteros ‘Gral. Gregorio Araoz de Lamadrid’
             </button></h1></a>
-          <p class="card-text">"</p>
-          <a href="" class="btn btn-outline-primary btn-block ">Ver mas</a>
+          <p class="card-text">Con el objetivo de aumentar y mejorar la capacidad de </p>
+          <a href="noticiasal12.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
       </div>
   </div>
 
