Agregue noticias a la pagina principal pero falta las de politica y salud

--- a/layouts/potreroDigital_proyecto_grupo17_PROYEC.HTML
+++ b/layouts/potreroDigital_proyecto_grupo17_PROYEC.HTML
@@ -85,75 +85,83 @@
 <main class=" row align-items-center justify-content-center">
 
   <div class="card" style="width: 18rem;">
-      <img src="IMAGENES/SALUD/ministro.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-      <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Covid-19: Vacunarán primero a los más vulnerables y a trabajadores de salud">
-      </button>Covid-19: Vacunarán primero "a los más vulnerables y a trabajadores de salud</h1></a>
-      <p class="card-text">"Tenemos una posición privilegiada en el acceso a las vacunas con la idea.</p>
-      <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
+      <img src="IMAGENES/entretenimiento/noticia4.jpg" height="190px" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="noticiaent4.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Bad Bunny dio positivo para COVID-19">
+          Bad Bunny dio positivo para COVID-19
+          </button></h1></a>
+      <p class="card-text">Inicialmente, estaba previsto que Bad Bunny interpretara</p>
+      <a href="noticiaent4.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
+      </div>
   </div>
 
-  </div>
-      <div class="card" style="width: 18rem;">
-      <img src="" class="card-img-top" alt="...">
-      <div class="card-body">
-      <h1 class="card-title">TODAVIA VACIO</h1>
-      <p class="card-text"></p>
-      <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
-  </div>
-
-  </div>
-    <div class="card" style="width: 18rem;">
-    <img src="" class="card-img-top" alt="...">
-    <div class="card-body">
-    <h1 class="card-title">TODAVIA VACIO</h1>
-    <p class="card-text"></p>
-    <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
-    </div>
-
-
-  </div>
   <div class="card" style="width: 18rem;">
-    <img src="" class="card-img-top" alt="...">
-    <div class="card-body">
-    <h1 class="card-title">TODAVIA VACIO</h1>
-    <p class="card-text"></p>
-    <a href="potreroDigital_proyecto_grupo17_noticiacompleta.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
+        <img src="IMAGENES/ECONOMIA/NOTICIA3.jpg" height="190px" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="NOTICIAeco2.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Se entregaron nuevos créditos a emprendedores y comerciantes de Malabrigo.">
+          Se entregaron nuevos créditos a emprendedores y comerciantes de Malabrigo.
+          </button></h1> </a>
+      <p class="card-text">El Intendente Roberto Sponton, junto al Secretario de</p>
+      <a href="NOTICIAeco3.html" class="btn btn-outline-primary btn-block">Ver mas</a>
+      </div>
   </div>
 
-</div>
+  <div class="card" style="width: 18rem;">
+      <img src="IMAGENES/DEPORTES/NOTICIA3.JPG" height="190PX"class="card-img-top" alt="...">
+      <div class="card-body">
+          <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Marcelo Gallardo realizó un profundo análisis sobre el fútbol argentino: “Se están viendo partidos feos en un contexto feo”">
+          Marcelo Gallardo realizó un profundo análisis sobre el fútbol argentino: “Se están viendo partidos feos en un contexto feo”
+          </button></h1> </a>
+      <p class="card-text">El entrenador de River Plate no confirmó </p>
+      <a href="NOTICIAdep3.html" class="btn btn-outline-primary btn-block">Ver mas</a>
+      </div>
+  </div>
 
-<div class="card" style="width: 18rem;">
-            <img src="" class="card-img-top" alt="...">
-            <div class="card-body">
-              <a href="1"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
-              </button></h1> </a>
-            <p class="card-text"></p>
-            <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+  <div class="card" style="width: 18rem;">
+      <img src="IMAGENES/DEPORTES/NOTICIA5.JPG" height="190PX" class="card-img-top" alt="...">
+      <div class="card-body">
+          <a href="NOTICIAdep5.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Messi no viaja a Kiev: la razón por la que no fue convocado para el próximo partido">
+            Messi no viaja a Kiev: la razón por la que no fue convocado para el próximo partido
+          </button></h1> </a>
+      <p class="card-text">El argentino quedó afuera de la nómina de futbolistas que</p>
+      <a href="NOTICIAdep5.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
+  </div>
 
-      </div>
-          <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
-          <div class="card-body">
-            <a href="2"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
-            </button></h1></a>
 
-          <p class="card-text"><br></p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
+  <div class="card" style="width: 18rem;">
+      <img src="IMAGENES/ECONOMIA/NOTICIA12.jpg" height="190px" class="card-img-top" alt="...">
+      <div class="card-body">
+          <a href="NOTICIAeco12.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Dólar hoy: la cotización libre sube a $162 y la brecha se sostiene en el 100 por ciento">
+          Dólar hoy: la cotización libre sube a $162 y la brecha se sostiene en el 100 por ciento
+          </button></h1></a>
+      <p class="card-text">Las paridades bursátiles también ascienden por el </p>
+      <a href="NOTICIAeco12.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
       </div>
+  </div>
 
+  <div class="card" style="width: 18rem;">
+      <img src="IMAGENES/entretenimiento/noticia2.jpg" height="190px" class="card-img-top" alt="...">
+      <div class="card-body">
+          <a href="noticiaent2.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="American Music Awards 2020: Esta es la lista de ganadores">
+          American Music Awards 2020: Esta es la lista de ganadores
+          </button></h1></a>
+      <p class="">Taylor Swift ganó su tercer galardón consecutivo<br></p>
+      <a href="noticiaent2.html" class="btn btn-outline-primary btn-block">Ver mas</a>
       </div>
-          <div class="card" style="width: 18rem;">
-          <img src="" class="card-img-top" alt="...">
-          <div class="card-body">
-            <a href="3"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="">
-            </button></h1> </a>
-          <p class="card-text"></p>
-          <a href="" class="btn btn-outline-primary btn-block">Ver mas</a>
-      </div>
+  </div>
 
+  <div class="card" style="width: 18rem;">
+      <img src="IMAGENES/ECONOMIA/NOTICIA8.jpg" height="190px" class="card-img-top" alt="...">
+      <div class="card-body">
+          <a href="NOTICIAeco8.html"><h1 class="card-title"<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="La provincia informó que invirtió más de 195 millones de pesos para asistir a comerciantes y prestadores de servicios afectados por la emergencia.">
+          La provincia informó que invirtió más de 195 millones de pesos para asistir a comerciantes y prestadores de servicios afectados por la emergencia.
+          </button></h1></a>
+      <p class="card-text">e realizó un nuevo desembolso de la Asistencia</p>
+      <a href="NOTICIAeco8.html" class="btn btn-outline-primary btn-block ">Ver mas</a>
       </div>
+  </div>
+  
           <div class="card" style="width: 18rem;">
           <img src="" class="card-img-top" alt="...">
           <div class="card-body">
